--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "deploy": "npm install && npm start"
   },
   "author": "Hassib Ashouri",
   "license": "ISC"
