--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "mongodb": "^3.2.2",
+    "nodemailer": "^6.1.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
