adding mocha for testing

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "the backend of the application",
   "main": "server.js",
   "dependencies": {
+    "mocha": "^6.1.4",
     "mongodb": "^3.2.2",
     "nodemailer": "^6.1.1",
     "socket.io": "^2.2.0",
@@ -11,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node server.js",
     "deploy": "npm install && npm start"
   },
